Improve how RWS handles connection losses
Properly support the Last-Event-ID HTTP header (and URL argument) in
Server-Sent-Events reqeuests to avoid the client missing some messages.
This requires the server to keep a buffer of recently sent events.

Also show a "network status indicator" showing the status of the SSE
connection and allowing the user to manually retry the connection if the
browser failed (or reloading the page if the local data is outdated).

--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='utf-8'/>
         <link rel='stylesheet' href='Ranking.css'>
         <script type="text/javascript" src="lib/jquery.js"></script>
         <script type="text/javascript" src="lib/eventsource.js"></script>
@@ -34,6 +35,10 @@
                             <div class="body" id="team_search_body"></div>
                         </div>
                     </div>
+                </div>
+                <div id="network_status_box">
+                    <div id="network_status_label">Status</div>
+                    <div id="network_status_text"></div>
                 </div>
             </div>
             <div id="timer"></div>
