Refactor Scoreboard.js (part of the client of RWS)
Make extensive use of JQuery. This shortens the code and improves
cross-browser compatibility.

--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -46,19 +46,8 @@
                 <div id="overview" class="overview"></div>
             </div>
             <div class="inner_frame">
-                <table class="scoreboard">
-                    <colgroup>
-                        <col class="sel" />
-                        <col class="rank" />
-                        <col class="f_name" />
-                        <col class="l_name" />
-                        <col class="team" />
-                    </colgroup>
-                    <colgroup id="Scoreboard_cols">
-                    </colgroup>
-                    <colgroup>
-                        <col class="score global" />
-                    </colgroup>
+                <table id="Scoreboard">
+                    <colgroup id="Scoreboard_cols"></colgroup>
                     <thead id="Scoreboard_head"></thead>
                     <tbody id="Scoreboard_body"></tbody>
                 </table>
