Add the Raphaël JavaScript library to RWS
See http://raphaeljs.com/.

--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -5,6 +5,7 @@
         <link rel='stylesheet' href='Ranking.css'>
         <script type="text/javascript" src="lib/jquery.js"></script>
         <script type="text/javascript" src="lib/eventsource.js"></script>
+        <script type="text/javascript" src="lib/raphael.js"></script>
         <!--[if lt IE 9]>
             <script type="text/javascript" src="lib/explorercanvas.js"></script>
         <![endif]-->
