Rewrite Overview.js (part of the client of RWS)
Use Raphael to draw a nicer overview.

--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -44,7 +44,7 @@
             </div>
             <div id="timer"></div>
             <div class="right_panel">
-                <div id="overview" class="overview"></div>
+                <div id="Overview"></div>
             </div>
             <div class="inner_frame">
                 <table id="Scoreboard">
