--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -3,7 +3,12 @@
     <head>
         <meta charset='utf-8'/>
         <link rel='stylesheet' href='Ranking.css'>
-        <script type="text/javascript" src="lib/jquery.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script type="text/javascript">
+if (typeof jQuery == 'undefined') {
+    document.write(unescape("%3Cscript src='lib/jquery.js' type='text/javascript'%3E%3C/script%3E"));
+}
+        </script>
         <script type="text/javascript" src="lib/eventsource.js"></script>
         <script type="text/javascript" src="lib/raphael.js"></script>
         <!--[if lt IE 9]>
