Rewrite TimeView.js (part of the client of RWS)
Allow the user to switch among different clocks: elapsed time, remaining
time and current time (i.e. "wall clock").

--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -47,7 +47,15 @@ if (typeof jQuery == 'undefined') {
                     <div id="network_status_text"></div>
                 </div>
             </div>
-            <div id="timer"></div>
+            <div id="TimeView">
+                <div id="TimeView_name"></div>
+                <div id="TimeView_selector">
+                    <div id="TimeView_time"></div><div id="TimeView_expand"><div class="caret"></div></div>
+                    <div id="TimeView_selector_elapsed">Elapsed time</div>
+                    <div id="TimeView_selector_remaining">Remaining time</div>
+                    <div id="TimeView_selector_current">Current time</div>
+                </div>
+            </div>
             <div class="right_panel">
                 <div id="Overview"></div>
             </div>
