--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -6,10 +6,12 @@
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script type="text/javascript">
 if (typeof jQuery == 'undefined') {
-    document.write(unescape("%3Cscript src='lib/jquery.js' type='text/javascript'%3E%3C/script%3E"));
+    document.write(unescape("%3Cscript type='text/javascript' src='lib/jquery.js'%3E%3C/script%3E"));
+}
+if (!("EventSource" in window)) {
+    document.write(unescape("%3Cscript type='text/javascript' src='lib/eventsource.js'%3E%3C/script%3E"));
 }
         </script>
-        <script type="text/javascript" src="lib/eventsource.js"></script>
         <script type="text/javascript" src="lib/raphael.js"></script>
         <!--[if lt IE 9]>
             <script type="text/javascript" src="lib/explorercanvas.js"></script>
