Link back to CMS home page in RWS

--- a/static/Ranking.html
+++ b/static/Ranking.html
@@ -51,6 +51,9 @@ if (!("EventSource" in window)) {
             </div>
             <div id="SidePanel">
                 <div id="Overview"></div>
+                <div style="color: #999; text-align: center; font-size: 12px; padding-top: 5px;">
+                    Powered by <a style="color: #00A3DA; text-decoration: none;" href="https://cms-dev.github.io/" target="_blank">CMS</a>
+                </div>
             </div>
             <div id="InnerFrame">
                 <table id="Scoreboard">
