--- a/cmsranking/static/Ranking.html
+++ b/cmsranking/static/Ranking.html
@@ -32,7 +32,7 @@ if (!("EventSource" in window)) {
     <body>
         <div id="OuterFrame">
             <div id="LogoPanel">
-                <img src="logo" />
+                <img src="logo" alt="Logo" />
             </div>
             <div id="UpperPanel">
                 <div id="ConnectionStatus_box">
@@ -66,20 +66,20 @@ if (!("EventSource" in window)) {
         <input id="TeamSearch_input" type="search" placeholder="Search Team"/>
         <div id="TeamSearch_bg">
             <div id="TeamSearch">
-                <img id="TeamSearch_close" src="img/close.png"/>
+                <img id="TeamSearch_close" src="img/close.png" alt="Close"/>
                 <div id="TeamSearch_body"></div>
             </div>
         </div>
         <div id="UserDetail_bg">
             <div id="UserDetail">
-                <img id="UserDetail_close" src="img/close.png"/>
+                <img id="UserDetail_close" src="img/close.png" alt="Close"/>
                 <div id="UserDetail_header">
                     <div id="UserDetail_summary">
-                        <img id="UserDetail_face" src=""/>
+                        <img id="UserDetail_face" src="" alt="Face"/>
                         <div id="UserDetail_f_name"></div>
                         <div id="UserDetail_l_name"></div>
                         <div id="UserDetail_team"></div>
-                        <img id="UserDetail_flag" src=""/>
+                        <img id="UserDetail_flag" src="" alt="Flag"/>
                     </div>
                     <div id="UserDetail_navigator">
                         <table>
